feat: scripts and metrics enhancement